--- a/src/main/resources/templates/task/create/step1.html
+++ b/src/main/resources/templates/task/create/step1.html
@@ -9,14 +9,14 @@
 
 <div class="site-wrap">
     <div class="mt-4 mb-3">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row border-bottom pb-3">
-                <div class="col-md-1 box-logo-step col-xl-12">
+                <div class="col-lg-1 box-logo-step">
                     <a th:href="@{/}">
                         <img alt="TaskUnite" class="logo-step" th:src="@{~/images/favicon.png}">
                     </a>
                 </div>
-                <div class="col-md-9 offset-md-2 col-xl-12">
+                <div class="col-lg-9 col-md-12 offset-lg-2">
                     <div class="box-step ">
                         <div class="step active st1">
                             <div class="box-circle">
