--- a/src/main/resources/templates/task/create/step4.html
+++ b/src/main/resources/templates/task/create/step4.html
@@ -3,6 +3,7 @@
 <head>
     <title>Create Task</title>
     <th:block th:include="fragment/layout :: head"></th:block>
+    <link rel="stylesheet" th:href="@{~/css/responsive/task/create.css}">
 </head>
 <body>
 
@@ -75,45 +76,21 @@
     </div>
 
     <div class="site-section bg-dark-light">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-7 col-lg-7 p-2">
-                    <div class="panel panel--spaced panel--with-overflow">
-                        <div class="form-group">
-                            <!--Thả description vào luôn;-->
-                            <label class="d-block">
-                                <div class="mb-3" th:text="#{task-create.step4.review-task-description}"></div>
-                                <textarea rows="5" name="description" id="description" class="form-control"
-                                          style="width: 100%; height: 185px;"></textarea>
-                            </label>
-
-                        </div>
-                        <div class="form-group my-4" style="height: 1px; background: #d0d0d0"></div>
-                        <div class="form-group mb-4" style="margin-top: -10px;" th:text="#{task-create.step4.notification-2}"></div>
-                        <div class="form-group">
-                            <label class="d-block">
-                                <div class="mb-3" th:text="#{task-create.step4.phone-number}">
-                                    Số điện thoại
-                                </div>
-                                <input type="text" class="form-control iBanking w-50" th:placeholder="#{task-create.step4.phone-number-placeholder}">
-                            </label>
-                        </div>
-                    </div>
-                    <div class="px-3" style="font-size: 13px;letter-spacing: 1px;" th:text="#{task-create.step4.notification-3}"></div>
-                </div>
                 <div class="col-md-5 col-lg-5 p-2">
                     <div class="panel panel--spaced panel--with-overflow">
                         <div class="row">
-                            <div class="col-lg-9">
+                            <div class="col-lg-2 col-sm-3 col-3">
+                                <img th:src="@{~/images/person_1.jpg}" alt="" class="confirm-avatar-tasker">
+                            </div>
+                            <div class="col-lg-10 col-sm-9 col-9">
                                 <div class="task-name text-bold" style="font-size: 18px">
                                     Công việc nhà
                                 </div>
                                 <div class="tasker-name mt-1">
                                     Trần Hiểu Đông
                                 </div>
-                            </div>
-                            <div class="col-lg-3">
-                                <img th:src="@{~/images/person_1.jpg}" alt="" class="confirm-avatar-tasker">
                             </div>
                         </div>
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
@@ -131,8 +108,8 @@
                         </div>
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
                         <div class="row">
-                            <div class="col-lg-6 text-bold t-20" th:text="#{task-create.step4.price-vnd-hour}"></div>
-                            <div class="col-lg-6 text-right t-20 t-green">
+                            <div class="col-lg-7 col-md-12 text-bold t-20" th:text="#{task-create.step4.price-vnd-hour}"></div>
+                            <div class="col-lg-5 col-md-12 t-20 t-green">
                                 80.000 vnđ/1h
                             </div>
                         </div>
@@ -147,6 +124,30 @@
                             <span th:text="#{task-create.step4.notification-6-2}"></span>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-7 col-lg-7 p-2">
+                    <div class="panel panel--spaced panel--with-overflow">
+                        <div class="form-group">
+                            <!--Thả description vào luôn;-->
+                            <label class="d-block">
+                                <div class="mb-3 text-bold"><span th:text="#{task-create.step4.review-task-description}"></span></div>
+                                <textarea rows="5" name="description" id="description" class="form-control"
+                                          style="width: 100%; height: 185px;"></textarea>
+                            </label>
+
+                        </div>
+                        <div class="form-group my-4" style="height: 1px; background: #d0d0d0"></div>
+                        <div class="form-group mb-4" style="margin-top: -10px;" th:text="#{task-create.step4.notification-2}"></div>
+                        <div class="form-group">
+                            <label class="d-block">
+                                <div class="mb-3 text-bold">
+                                    <span th:text="#{task-create.step4.phone-number}"></span>
+                                </div>
+                                <input type="text" class="form-control iPhoneNumber w-50" th:placeholder="#{task-create.step4.phone-number-placeholder}">
+                            </label>
+                        </div>
+                    </div>
+                    <div class="px-3" style="font-size: 13px;letter-spacing: 1px;" th:text="#{task-create.step4.notification-3}"></div>
                 </div>
             </div>
             <div class="row">
