--- a/src/main/resources/templates/task/create/step3.html
+++ b/src/main/resources/templates/task/create/step3.html
@@ -3,85 +3,20 @@
 <head>
     <title>Create Task</title>
     <th:block th:include="fragment/layout :: head"></th:block>
+    <link rel="stylesheet" th:href="@{~/css/responsive/task/create.css}">
 </head>
 <body style="overflow: hidden">
 
 <div class="site-wrap">
-    <div class="mt-4 mb-3">
-        <div class="container">
-            <div class="row border-bottom pb-3">
-                <div class="col-md-1 box-logo-step col-xs-12">
-                    <a th:href="@{/}">
-                        <img alt="TaskUnite" class="logo-step" th:src="@{~/images/favicon.png}">
-                    </a>
-                </div>
-                <div class="col-md-9 offset-md-2">
-                    <div class="box-step ">
-                        <div class="step active st1">
-                            <a th:href="@{/task/create/step1(action='backStep1')}">
-                                <div class="box-circle">
-                                    <div class="circle"><i class="icon-done"></i></div>
-                                </div>
-                            </a>
-                            <div class="box-line">
-                                <div class="line"></div>
-                            </div>
-                            <div class="name-step" th:text="#{task-create.step1.task-infor}"></div>
-                        </div>
-                        <div class="step active st2">
-                            <a th:href="@{/task/create/step1(action='backStep2')}">
-                                <div class="box-circle">
-                                    <div class="circle">2</div>
-                                </div>
-                            </a>
-                            <div class="box-line ">
-                                <div class="line"></div>
-                            </div>
-                            <div class="name-step" th:text="#{task-create.step2.task-prices}"></div>
-                        </div>
-                        <div class="step active st3">
-                            <div class="box-circle">
-                                <div class="circle">3</div>
-                            </div>
-                            <div class="box-line">
-                                <div class="line"></div>
-                            </div>
-                            <div class="name-step" th:text="#{task-create.step3.choose-date-time}"></div>
-                        </div>
-                        <div class="step st4">
-                            <div class="box-circle">
-                                <div class="circle">4</div>
-                            </div>
-                            <div class="name-step" th:text="#{task-create.step4.confirm-details}"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 p-0 mt-1">
-                    <div class="build-progress__sub-bar">
-                        <div class="build-progress__sub-bar__container">
-                            <img alt="form" class="build-progress__sub-bar__icon" th:src="@{~/images/user-plus.svg}">
-                            <div class="build-progress__sub-bar__message">
-                                <span th:text="#{task-create.step2.notification-1}"></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12 bg-dark-light"
-                 style="min-height: 100vh;position: absolute;top: 0;left: 0; z-index: 1000;">
+            <div class="col-md-12 bg-dark-light step-3-responsive">
                 <div class="row">
                     <div class="col-lg-7 modal-choose-date p-4 bg-white">
                         <a th:href="@{/task/create/step2(action='backStep2')}">
                             <span class="icon-close2 close"></span>
                         </a>
-                        <div style="font-size: 25px" class="f-w-300 text-center my-2" th:text="#{task-create.step3.choose-task-date-and-start-time}"></div>
+                        <div class="f-w-300 text-center my-2 t-25" th:text="#{task-create.step3.choose-task-date-and-start-time}"></div>
                         <div class="row mt-2">
                             <div class="col-lg-7 p-0">
                                 <div class="recommendations__tasker_schedule_modal_tasker">
@@ -89,7 +24,7 @@
                                          alt="Mahendra B.">
                                     <div><span>Trần Hiểu Đông</span></div>
                                 </div>
-                                <div style="border-right: 1px solid #E5E7EC">
+                                <div class="border-right box-date">
                                     <div class="calendar__container">
                                         <div id="calendar-value"></div>
                                     </div>
@@ -118,8 +53,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-5">
-                                <div class="box-next-step-4 mt-5">
+                            <div class="col-lg-5 p-0">
+                                <div class="box-next-step-4 mt-lg-5 mt-xl-1">
                                     <div class="t-30 f-w-300" th:text="#{task-create.step3.request-for}"></div>
                                     <div class="pre-datetime t-25">
                                         22 - T11, 8:30
