--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -31,7 +31,8 @@
 
                 <div class="col-md-12 mb-5">
 
-                    <form th:method="POST" th:action="@{/api/authentication}" class="p-5 bg-white">
+                    <form action="#" id="loginForm" class="p-5 bg-white">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                         <div class="row form-group">
                             <div class="col-md-12 mb-3 mb-md-0">
                                 <label class="font-weight-bold" for="login">User Name</label>
@@ -63,5 +64,6 @@
     <th:block th:include="fragment/layout :: footer"> </th:block>
 </div>
 <th:block th:include="fragment/layout :: javascript"> </th:block>
+<script th:src="@{~/js/account/login.js}"></script>
 </body>
 </html>
