Tasker being registered

--- a/src/main/resources/templates/task/room/room.html
+++ b/src/main/resources/templates/task/room/room.html
@@ -165,6 +165,6 @@
     <!--END MODAL-->
 </div>
 <th:block th:include="fragment/layout :: javascript"></th:block>
-<script th:src="@{~/js/task/room-task.js}"></script>
+<script th:src="@{~/js/task/room-tasker.js}"></script>
 </body>
 </html>
