--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1605,11 +1605,16 @@ a:hover {
   border-bottom: 1px solid #f1f1f1;
 }
 
-#filter-option {
+.filter-option {
   padding: 7px;
   border: none;
   border: 1px solid #9c9c9c;
   border-radius: 3px;
+  height: 40px;
+}
+
+.box-filter {
+  margin-top: 40px;
 }
 
 .task-box .text-label {
