--- a/src/main/resources/templates/home/contact.html
+++ b/src/main/resources/templates/home/contact.html
@@ -35,35 +35,35 @@
 
                         <div class="row form-group">
                             <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="fullname">Full Name</label>
-                                <input type="text" id="fullname" class="form-control" placeholder="Full Name">
+                                <label class="font-weight-bold" for="fullname">Họ và tên</label>
+                                <input type="text" id="fullname" class="form-control" placeholder="Họ tên đầy đủ #">
                             </div>
                         </div>
                         <div class="row form-group">
                             <div class="col-md-12">
                                 <label class="font-weight-bold" for="email">Email</label>
-                                <input type="email" id="email" class="form-control" placeholder="Email Address">
+                                <input type="email" id="email" class="form-control" placeholder="Email #">
                             </div>
                         </div>
 
 
                         <div class="row form-group">
                             <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="phone">Phone</label>
-                                <input type="text" id="phone" class="form-control" placeholder="Phone #">
+                                <label class="font-weight-bold" for="phone">Số điện thoại</label>
+                                <input type="text" id="phone" class="form-control" placeholder="Số điện thoại #">
                             </div>
                         </div>
 
                         <div class="row form-group">
                             <div class="col-md-12">
-                                <label class="font-weight-bold" for="message">Message</label>
-                                <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Say hello to us"></textarea>
+                                <label class="font-weight-bold" for="message">Phản hồi</label>
+                                <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Nội dung phản hồi"></textarea>
                             </div>
                         </div>
 
                         <div class="row form-group">
                             <div class="col-md-12">
-                                <input type="submit" value="Send Message" class="btn btn-primary pill px-4 py-2">
+                                <input type="submit" value="Gửi phản hồi" class="btn btn-primary pill px-4 py-2">
                             </div>
                         </div>
 
@@ -73,49 +73,25 @@
 
                 <div class="col-lg-4">
                     <div class="p-4 mb-3 bg-white">
-                        <h3 class="h5 text-black mb-3">Contact Info</h3>
-                        <p class="mb-0 font-weight-bold">Address</p>
-                        <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
+                        <h3 class="h5 text-black mb-3">Thông tin liên hệ</h3>
+                        <p class="mb-0 font-weight-bold">Địa chỉ</p>
+                        <p class="mb-4">Số 8A Tôn Thất Thuyết, Mỹ Đình, Nam Từ Liêm, Hà Nội</p>
 
-                        <p class="mb-0 font-weight-bold">Phone</p>
+                        <p class="mb-0 font-weight-bold">Số điện thoại</p>
                         <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
 
-                        <p class="mb-0 font-weight-bold">Email Address</p>
-                        <p class="mb-0"><a href="#">youremail@domain.com</a></p>
+                        <p class="mb-0 font-weight-bold">Email</p>
+                        <p class="mb-0"><a href="#">taskunite@mail.com</a></p>
 
                     </div>
 
                     <div class="p-4 mb-3 bg-white">
-                        <h3 class="h5 text-black mb-3">More Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ad iure porro mollitia architecto hic consequuntur. Distinctio nisi perferendis dolore, ipsa consectetur? Fugiat quaerat eos qui, libero neque sed nulla.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-2 text-white pill">Learn More</a></p>
+                        <h3 class="h5 text-black mb-3">Thông tin thêm</h3>
+                        <p>
+                            Chúng tôi rất mong nhận được phản hồi của quý khách để ngày càng cải thiện chất lượng dịch vụ.
+                            Đội ngũ chăm sóc khách hàng của chúng tôi luôn trực 24/7 để đồng hành với quý khách trong từng công việc.
+                        </p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="py-5 quick-contact-info">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div>
-                        <h2><span class="icon-room"></span> Location</h2>
-                        <p class="mb-0">New York - 2398 <br>  10 Hadson Carl Street</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div>
-                        <h2><span class="icon-clock-o"></span> Service Times</h2>
-                        <p class="mb-0">Wednesdays at 6:30PM - 7:30PM <br>
-                            Fridays at Sunset - 7:30PM <br>
-                            Saturdays at 8:00AM - Sunset</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <h2><span class="icon-comments"></span> Get In Touch</h2>
-                    <p class="mb-0">Email: info@yoursite.com <br>
-                        Phone: (123) 3240-345-9348 </p>
                 </div>
             </div>
         </div>
