--- a/src/main/resources/templates/fragment/layout.html
+++ b/src/main/resources/templates/fragment/layout.html
@@ -62,14 +62,6 @@
                                             <a th:href="@{/category}" th:text="#{home.category}"></a>
                                             <ul class="dropdown arrow-top">
                                                 <li><a href="#">Category</a></li>
-                                                <li class="has-children">
-                                                    <a href="#">More Links</a>
-                                                    <ul class="dropdown">
-                                                        <li><a href="#">Browse Candidates</a></li>
-                                                        <li><a href="#">Post a Job</a></li>
-                                                        <li><a href="#">Employeer Profile</a></li>
-                                                    </ul>
-                                                </li>
                                             </ul>
                                         </li>
                                         <!--<li class="has-children">-->
@@ -129,22 +121,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h3 class="footer-heading mb-4 text-white">About</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat quos rem ullam, placeat
-                        amet.</p>
+                    <h3 class="footer-heading mb-4 text-white">Về chúng tôi</h3>
+                    <p>Task Unite giúp kết nối những người có yêu cầu việc và những người có nhu cầu làm việc một cách
+                    nhanh chóng và đáng tin cậy.</p>
                     <p><a href="#" class="btn btn-primary pill text-white px-4">Read More</a></p>
                 </div>
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-6">
-                            <h3 class="footer-heading mb-4 text-white">Quick Menu</h3>
+                            <h3 class="footer-heading mb-4 text-white">Thao tác nhanh</h3>
                             <ul class="list-unstyled">
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Approach</a></li>
-                                <li><a href="#">Sustainability</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Careers</a></li>
+                                <li><a href="#">Đăng ký</a></li>
+                                <li><a href="#">Đăng nhập</a></li>
+                                <li><a href="#">Tạo Task</a></li>
+                                <li><a href="#">Danh mục công việc</a></li>
+                                <li><a href="#">Thông báo</a></li>
+                                <li><a href="#">Tuyển dụng</a></li>
                             </ul>
                         </div>
                         <div class="col-md-6">
