--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -19,31 +19,11 @@
          data-aos="fade" data-stellar-background-ratio="0.5">s
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-12" data-aos="fade">
-                    <h1 th:text="#{home.find-job}">Find Job</h1>
-                    <form action="#">
-                        <div class="row mb-3">
-                            <div class="col-md-9">
-                                <div class="row">
-                                    <div class="col-md-6 mb-3 mb-md-0">
-                                        <input type="text" class="mr-3 form-control border-0 px-4" th:placeholder="#{home.job-title-keywords-or-company-name}">
-                                    </div>
-                                    <div class="col-md-6 mb-3 mb-md-0">
-                                        <div class="input-wrap">
-                                            <span class="icon icon-room"></span>
-                                            <input type="text"
-                                                   class="form-control form-control-block search-input  border-0 px-4"
-                                                   id="autocomplete" th:placeholder="#{home.city-province-or-region}"
-                                                   onFocus="geolocate()">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <input type="submit" class="btn btn-search btn-primary btn-block" th:value="#{home.search}">
-                            </div>
-                        </div>
-                    </form>
+                <div class="col-12 text-center" data-aos="fade">
+                    <h1>Không cần phải tự tay hoàn thành hết mọi công việc</h1>
+                    <h3 style="color: whitesmoke">
+                        Hãy để mạng lưới hàng ngàn Tasker đáng tin cậy giúp đỡ bạn, từ lau dọn đến sửa chữa
+                    </h3>
                 </div>
             </div>
         </div>
@@ -295,12 +275,12 @@
                 </div>
                 <div class="col-md-5 ml-auto">
                     <div class="text-left mb-5 section-heading">
-                        <h2>Testimonies</h2>
+                        <h2>Đánh giá dịch vụ</h2>
                     </div>
 
-                    <p class="mb-4 h5 font-italic lineheight1-5">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, nisi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit nobis magni eaque velit eum, id rem eveniet dolor possimus voluptas..&rdquo;</p>
-                    <p>&mdash; <strong class="text-black font-weight-bold">John Holmes</strong>, Marketing Strategist</p>
-                    <p><a href="https://vimeo.com/28959265" class="popup-vimeo text-uppercase">Watch Video <span class="icon-arrow-right small"></span></a></p>
+                    <p class="mb-4 h5 font-italic lineheight1-5">&ldquo;Từ khi bắt đầu sử dụng TaskUnite, tôi không cần giành cả cuối tuần để dọn dẹp nhà cửa và mua sắm thực phẩm cho cả tuần nữa.
+                     Tôi đã có thêm thời gian để chăm sóc bản thân và gia đình của tôi. Cảm ơn TaskUnite rất nhiều !&rdquo;</p>
+                    <p>&mdash; <strong class="text-black font-weight-bold">Đào Xuân Hùng</strong>, Chuyên gia công nghệ</p>
                 </div>
             </div>
         </div>
@@ -310,9 +290,8 @@
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-6 text-center" data-aos="fade">
-                    <h1 class="h3 mb-0">Your Dream Job</h1>
-                    <p class="h3 text-white mb-5">Is Waiting For You</p>
-                    <p><a href="#" class="btn btn-outline-warning py-3 px-4">Find Jobs</a> <a href="#" class="btn btn-warning py-3 px-4">Apply For A Job</a></p>
+                    <h2 class="h1 mb-0" style="color: whitesmoke">Kiếm thêm thu nhập với những công việc đơn giản</h2>
+                    <p><a href="#" class="btn btn-warning py-3 px-4">Trở thành Tasker</a></p>
 
                 </div>
             </div>
@@ -323,19 +302,19 @@
         <div class="container">
 
             <div class="text-center mb-5 section-heading">
-                <h2>Why Choose Us</h2>
+                <h2>Tại sao bạn nên chọn TaskUnite</h2>
             </div>
 
             <div class="d-block d-md-flex border-bottom">
                 <div class="text-center p-4 item border-right" data-aos="fade">
                     <span class="flaticon-worker display-3 mb-3 d-block text-primary"></span>
-                    <h2 class="h4">More Jobs Every Day</h2>
+                    <h2 class="h4">Mạng lưới Tasker lớn</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reprehenderit explicabo quos fugit vitae dolorum.</p>
                     <p><a href="#">Read More <span class="icon-arrow-right small"></span></a></p>
                 </div>
                 <div class="text-center p-4 item" data-aos="fade">
                     <span class="flaticon-wrench display-3 mb-3 d-block text-primary"></span>
-                    <h2 class="h4">Creative Jobs</h2>
+                    <h2 class="h4">Đa dạng công việc</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reprehenderit explicabo quos fugit vitae dolorum.</p>
                     <p><a href="#">Read More <span class="icon-arrow-right small"></span></a></p>
                 </div>
@@ -343,13 +322,13 @@
             <div class="d-block d-md-flex">
                 <div class="text-center p-4 item border-right" data-aos="fade">
                     <span class="flaticon-stethoscope display-3 mb-3 d-block text-primary"></span>
-                    <h2 class="h4">Healthcare</h2>
+                    <h2 class="h4">Bảo hiểm đầy đủ</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reprehenderit explicabo quos fugit vitae dolorum.</p>
                     <p><a href="#">Read More <span class="icon-arrow-right small"></span></a></p>
                 </div>
                 <div class="text-center p-4 item" data-aos="fade">
                     <span class="flaticon-calculator display-3 mb-3 d-block text-primary"></span>
-                    <h2 class="h4">Finance &amp; Accounting</h2>
+                    <h2 class="h4">Thu nhập cao</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reprehenderit explicabo quos fugit vitae dolorum.</p>
                     <p><a href="#">Read More <span class="icon-arrow-right small"></span></a></p>
                 </div>
@@ -375,9 +354,9 @@
                             <img th:src="@{~/images/img_1.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
-                    <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
+                    <h2 class="heading mb-0 h5"><a href="#">Dọn dẹp nhà cửa thật đơn giản</a></h2>
                     <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
+                    <p>Dọn dẹp nhà cửa thật sự rất vất vả và tốn thời gian. Nhờ sự trợ giúp của các Tasker, tôi đã có thêm thời gian cho những sở thích cá nhân</p>
                 </div>
 
                 <div class="media-with-text">
@@ -386,9 +365,9 @@
                             <img th:src="@{~/images/img_2.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
-                    <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
+                    <h2 class="heading mb-0 h5"><a href="#">Sửa TV trong vòng vài nốt nhạc</a></h2>
                     <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
+                    <p>Tôi đang xem đội tuyển Việt Nam đá thì TV bị hỏng. Rất may có một Tasker đã sửa được TV và tôi không bỏ lỡ bàn thắng nào. Cảm ơn TaskUnite</p>
                 </div>
 
                 <div class="media-with-text">
@@ -397,75 +376,12 @@
                             <img th:src="@{~/images/img_3.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
-                    <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
+                    <h2 class="heading mb-0 h5"><a href="#">Mua sắm thật tiện lợi</a></h2>
                     <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-                </div>
-
-                <div class="media-with-text">
-                    <div class="img-border-sm mb-4">
-                        <a href="#" class="image-play">
-                            <img th:src="@{~/images/img_1.jpg}" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                    <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
-                    <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-                </div>
-
-                <div class="media-with-text">
-                    <div class="img-border-sm mb-4">
-                        <a href="#" class="image-play">
-                            <img th:src="@{~/images/img_2.jpg}" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                    <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
-                    <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-                </div>
-
-                <div class="media-with-text">
-                    <div class="img-border-sm mb-4">
-                        <a href="#" class="image-play">
-                            <img th:src="@{~/images/img_3.jpg}" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                    <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
-                    <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-                </div>
-
-                <div class="media-with-text">
-                    <div class="img-border-sm mb-4">
-                        <a href="#" class="image-play">
-                            <img th:src="@{~/images/img_1.jpg}" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                    <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
-                    <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-                </div>
-
-                <div class="media-with-text">
-                    <div class="img-border-sm mb-4">
-                        <a href="#" class="image-play">
-                            <img th:src="@{~/images/img_2.jpg}" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                    <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
-                    <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-                </div>
-
-                <div class="media-with-text">
-                    <div class="img-border-sm mb-4">
-                        <a href="#" class="image-play">
-                            <img th:src="@{~/images/img_3.jpg}" alt="" class="img-fluid">
-                        </a>
-                    </div>
-                    <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
-                    <span class="mb-3 d-block post-date">January 20, 2018 &bullet; By <a href="#">Josh Holmes</a></span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
+                    <p>
+                        Tôi thường làm việc từ sáng đến tối nên không có nhiều thời gian để đi mua sắm. Nhờ có các Tasker đáng tin cậy,
+                        gia đình tôi luôn có đủ thực phẩm và hàng hóa để sinh hoạt. Yêu TaskUnite !!!
+                    </p>
                 </div>
             </div>
         </div>
